[gd_scene load_steps=8 format=1]

[ext_resource path="res://logic/theend.gd" type="Script" id=1]
[ext_resource path="res://resource/graphics/final_down.png" type="Texture" id=2]
[ext_resource path="res://resource/graphics/final_mid.png" type="Texture" id=3]
[ext_resource path="res://resource/graphics/final_up.png" type="Texture" id=4]
[ext_resource path="res://resource/graphics/be_continued_off.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 130.723, 30.7538 )

[sub_resource type="Animation" id=2]

resource/name = "show_end"
length = 3.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("up:transform/pos")
tracks/0/interp = 1
tracks/0/keys = { "cont":true, "times":FloatArray( 0, 0.5 ), "transitions":FloatArray( 1, 1 ), "values":[ Vector2( -320, 240 ), Vector2( 320, 240 ) ] }
tracks/1/type = "value"
tracks/1/path = NodePath("mid:transform/pos")
tracks/1/interp = 1
tracks/1/keys = { "cont":true, "times":FloatArray( 0, 1, 1.5 ), "transitions":FloatArray( 1, 1, 1 ), "values":[ Vector2( 960, 240 ), Vector2( 960, 240 ), Vector2( 320, 240 ) ] }
tracks/2/type = "value"
tracks/2/path = NodePath("down:transform/pos")
tracks/2/interp = 1
tracks/2/keys = { "cont":true, "times":FloatArray( 0, 1, 1.5, 2, 2.5 ), "transitions":FloatArray( 1, 1, 1, 1, 1 ), "values":[ Vector2( -320, 240 ), Vector2( -320, 240 ), Vector2( -320, 240 ), Vector2( -320, 240 ), Vector2( 320, 240 ) ] }
tracks/3/type = "value"
tracks/3/path = NodePath("be-continued:visibility/opacity")
tracks/3/interp = 1
tracks/3/keys = { "cont":true, "times":FloatArray( 0, 3, 3.5 ), "transitions":FloatArray( 1, 1, 1 ), "values":[ 0.0, 0.0, 1.0 ] }

[node name="theend" type="Node2D"]

script/script = ExtResource( 1 )
__meta__ = { "__editor_plugin_screen__":"Script" }

[node name="down" type="Sprite" parent="."]

transform/pos = Vector2( 320, 240 )
texture = ExtResource( 2 )

[node name="mid" type="Sprite" parent="."]

transform/pos = Vector2( 320, 240 )
texture = ExtResource( 3 )

[node name="up" type="Sprite" parent="."]

transform/pos = Vector2( 320, 240 )
texture = ExtResource( 4 )

[node name="be-continued" type="Area2D" parent="."]

transform/pos = Vector2( 501.508, 440.891 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 3, 4 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = { "_edit_group_":true, "_editor_collapsed":true }

[node name="Sprite" type="Sprite" parent="be-continued"]

texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="be-continued"]

transform/pos = Vector2( 3, 4 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/show_end = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="mouse_enter" from="be-continued" to="." method="_on_becontinued_mouse_enter"]

[connection signal="input_event" from="be-continued" to="." method="_on_becontinued_input_event"]

[connection signal="mouse_exit" from="be-continued" to="." method="_on_becontinued_mouse_exit"]


